--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -142,7 +142,6 @@ layout: compress
         </div>
         <!-- end /.fixed-condition -->
       </div>
-      <!--
       <div class="col-sm-8 col-offset-1 main-layout">
         {{ content }}
         <footer>
@@ -150,14 +149,15 @@ layout: compress
           {% if site.github %}
             - <a href="{{ site.github }}">{{ site.github }}</a> - Powered by Jekyll.
           {% endif %}
+          <!--
           <div class="btn-github" style="float:right;">
-            <iframe src="https://ghbtns.com/github-btn.html?user=agusmakmun&repo=agusmakmun.github.io&type=star&count=true" frameborder="0" scrolling="0" width="100" height="20px"></iframe>
-            <iframe src="https://ghbtns.com/github-btn.html?user=agusmakmun&repo=agusmakmun.github.io&type=fork&count=true" frameborder="0" scrolling="0" width="100" height="20px"></iframe>
+            <iframe src="https://ghbtns.com/github-btn.html?user=zhidonghe&repo=zhidonghe.github.io&type=star&count=true" frameborder="0" scrolling="0" width="100" height="20px"></iframe>
+            <iframe src="https://ghbtns.com/github-btn.html?user=zhidonghe&repo=zhidonghe.github.io&type=fork&count=true" frameborder="0" scrolling="0" width="100" height="20px"></iframe>
           </div>
+          -->
         </footer>
       </div>
       <!-- end /.col-sm-8 -->
-       -->
     </div>
     <!-- end /.container -->
 
